--- a/solar-control/rootfs/usr/bin/templates/base.html
+++ b/solar-control/rootfs/usr/bin/templates/base.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Solar Optimiser{% endblock %}</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/searchable-select.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/sensor-cards.css') }}">
     {% block extra_head %}{% endblock %}
 </head>
 <body>
@@ -15,5 +17,7 @@
             {% block content %}{% endblock %}
         </div>
     </div>
+    <script src="{{ url_for('static', filename='js/searchable-select.js') }}"></script>
+    {% block extra_scripts %}{% endblock %}
 </body>
 </html> 
